# FP-lab-3

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  fp_lab_3.opam  golden_test.sh  update_golden_test.sh
.github/workflows/: main.yml
lib/: dune  input.ml  presets.ml  runners.ml  runners.mli  utils.ml
test/: dune  example  golden_example  runner.ml
test/examples/: diagonal
